[gd_scene load_steps=25 format=3 uid="uid://rwbimw3fhoxj"]

[ext_resource type="Script" uid="uid://dvyhj5p582c73" path="res://scripts/Enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://bidd3lcdx0igl" path="res://assets/sprites/characters/enemy_1/Hit.png" id="2_5uy6h"]
[ext_resource type="Texture2D" uid="uid://f5g8yx88k810" path="res://assets/sprites/characters/enemy_1/Run.png" id="3_c4w8v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jbj1t"]
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_yq6so"]
atlas = ExtResource("2_5uy6h")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv21b"]
atlas = ExtResource("2_5uy6h")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tel4y"]
atlas = ExtResource("2_5uy6h")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkpxi"]
atlas = ExtResource("2_5uy6h")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q0nq"]
atlas = ExtResource("2_5uy6h")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_muem4"]
atlas = ExtResource("3_c4w8v")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3eg"]
atlas = ExtResource("3_c4w8v")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ld40"]
atlas = ExtResource("3_c4w8v")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqmmt"]
atlas = ExtResource("3_c4w8v")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc10j"]
atlas = ExtResource("3_c4w8v")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jscy8"]
atlas = ExtResource("3_c4w8v")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm3ni"]
atlas = ExtResource("3_c4w8v")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6deb"]
atlas = ExtResource("3_c4w8v")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1vs"]
atlas = ExtResource("3_c4w8v")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wyq8"]
atlas = ExtResource("3_c4w8v")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxglm"]
atlas = ExtResource("3_c4w8v")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f3dj"]
atlas = ExtResource("3_c4w8v")
region = Rect2(528, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_yq6so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq6so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv21b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tel4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkpxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q0nq")
}],
"loop": false,
"name": &"hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muem4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ld40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqmmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc10j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jscy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm3ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6deb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wyq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxglm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f3dj")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbj1t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muem4"]
size = Vector2(18, 6)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 16
script = ExtResource("1_4ra3w")

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 7)
shape = SubResource("CapsuleShape2D_jbj1t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yq6so")
animation = &"run"
autoplay = "run"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4

[node name="HitboxCollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_jbj1t")
debug_color = Color(0.7048421, 0.34831527, 0.86887294, 0.41960785)

[node name="StompZone" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompZone"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_muem4")
debug_color = Color(0.7430921, 0.4649678, 3.85046e-07, 0.41960785)

[node name="FloorRayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(-25, 16)
collision_mask = 16
